-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.2.1
-
macOS 10.12
-
81a32df63386ba11da74f8efd9281195552807c7 (qt-creator/qt-creator/master)
"Build file" does not account for the object_parallel_to_source setting in a pro file. This means that regardless of where the file is, it will always do:
10:53:56: Starting: "/usr/bin/make" .obj/model.o
make: `.obj/model.o' is up to date.
even if the file is in a separate directory and the object file is supposed to be in the same location as the source file.