Fix build file when 'object_parallel_to_source' is enabled

If running 'Build File' and the 'objects_parallel_to_source' CONFIG
option is set for the project, make sure to modify the object file's
path so that it's target location is the relative to the build root
in the same way its source file's location is relative to the source
root.

- Add an accessor in QmakeProFileNode to check whether the
 'objects_parallel_to_source' CONFIG option is set.
- Modify the object directory in QmakeMakeStep::init to ensure that it
  has the same relative path to the object file from the build root,
  as its source file has relative to the source root.

Fixes: QTCREATORBUG-18136
Change-Id: I63ef3af1fd4b7ef9fc46959f44d88b8025e99238
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>